修正了大部分的bug，更正了登陆登出的链接

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <META HTTP-EQUIV="Refresh" CONTENT="2;URL=index/index.f1t">
+    <META HTTP-EQUIV="Refresh" CONTENT="2;URL=index.f1t">
 
     <!-- Le styles -->
     <link href="res/css/bootstrap.css" rel="stylesheet">
