change name to meican

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>fan1tuan</title>
+    <title>美餐网</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -105,7 +105,7 @@
 
       <!-- Jumbotron -->
       <div class="jumbotron">
-        <h1>来啦，fan1tuan</h1>
+        <h1>来啦，美餐</h1>
       </div>
 
       <hr>
